# SkyTrajectoryTask1

./: CMakeLists.txt  README.md  package.xml  waypoint_nav_node.cpp  waypoints.world
